# pymapman

./: README.md  pymapman_cli.py  pyproject.toml
pymapman/: __init__.py  parsers.py
resources/mapman_diagrams/: stress-responses.xml
